--- a/client/app/styles/slider.scss
+++ b/client/app/styles/slider.scss
@@ -13,14 +13,14 @@ body {
     font-family: "texgyreadventor", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: bold;
 
-    width: 960px; // old website limitation
+    width: 100%; // old website limitation // Ocupa o ecra todo horizontalmente
 
     //background-color: #19191F;
     //background-image: linear-gradient(#5FAAD5, #ffffff);
 }
 
 .slider {
-    width: 670px;
+    width: 80%; // Ocupa 80% do ecra e deixa 20 para o texto
     height: 450px;
     display: inline-block;
 
@@ -68,7 +68,7 @@ body {
 
 .slider-text {
     color: #008080;
-    width: 30%;
+    width: 20%;
     float: right;
     text-align: center;
 
